--- a/react-ts-eslint-wp4/src/app.less
+++ b/react-ts-eslint-wp4/src/app.less
@@ -4,6 +4,9 @@ body {
 }
 
 .demo {
-    background-image: url('./assets/1.jpg');
-    background-size: 100% 100%;
+    padding-top: 10px;
+}
+
+#dd {
+    background: yellow;
 }
