--- a/react-ts-eslint-wp4/src/app.less
+++ b/react-ts-eslint-wp4/src/app.less
@@ -1,12 +1,14 @@
+@import '~antd/dist/antd.css';
+
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .demo {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 #dd {
-    background: yellow;
+  background: yellow;
 }
