--- a/react-ts-eslint-wp4/src/app.less
+++ b/react-ts-eslint-wp4/src/app.less
@@ -1,14 +1,1 @@
-@import '~antd/dist/antd.css';
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.demo {
-  padding-top: 10px;
-}
-
-#dd {
-  background: yellow;
-}
+// @import '~antd/dist/antd.css';
