--- a/react-ts-eslint-wp4/src/layouts/BasicLayout.less
+++ b/react-ts-eslint-wp4/src/layouts/BasicLayout.less
@@ -1,7 +1,13 @@
 .bg {
   height: 100vh;
-  background-image: url('../assets/banner_bg.jpg');
 }
-.margin{
-    margin:0 10px;
+
+.margin {
+  margin: 0 10px;
+}
+
+.banner {
+  background-image: url('../assets/banner_bg.jpg');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
