--- a/react-ts-eslint-wp4/src/layouts/BasicLayout.less
+++ b/react-ts-eslint-wp4/src/layouts/BasicLayout.less
@@ -7,7 +7,7 @@
 }
 
 .banner {
-  background-image: url('../assets/banner_bg.jpg');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  background: url('../assets/banner_bg.jpg') 100% 100% no-repeat;
 }
