--- a/react-ts-eslint-wp4/src/pages/HelloWorldDemo/HelloWorldDemoPage.less
+++ b/react-ts-eslint-wp4/src/pages/HelloWorldDemo/HelloWorldDemoPage.less
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  // font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -27,7 +27,73 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.banner {
+  background: red;
+  background: url(../../assets/banner_bg.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.OffsetSection__grid {
+  background: #66b3ba;
+}
+
+.ColumnSection__grid div {
+  lost-column: 1/1;
+}
+
+.OffsetSection__grid div {
+  background: #52a9b1;
+  lost-column: 1/3;
+}
+
+.OffsetSection__grid div:first-child {
+  lost-offset: 1/3;
+}
+
+@media (min-width: 400px) {
+  .ColumnSection__grid div {
+    lost-column: 1/3;
+  }
+}
+
+@media (min-width: 900px) {
+  .ColumnSection__grid div {
+    lost-column: 1/6;
+  }
+
+  .OffsetSection__grid div:first-child {
+    lost-offset: clear-left;
+  }
+}
+
+.NestingSection__grid {
+  background: #8eb19d;
+}
+
+.NestingSection__grid div {
+  background: #7ba48d;
+  lost-column: 1/3;
+}
+
+.NestingSection__grid div div {
+  background: #68977c;
+  lost-column: 1/2;
+}
+
+.AlignmentSection__grid {
+  background: #f0d2d1;
+  height: 300px;
+  lost-align: center;
+}
+
+.AlignmentSection__grid div {
+  background: #e5b1af;
+  lost-column: 1/3;
 }
